Drop development packages
Usually in runtime use cases, there is no need to keep
development packages.

It causes hard to check false-positive vulnerability reports.

FYI: fluentd-docker-image already drops *-dev package.

Signed-off-by: Kentaro Hayashi <hayashi@clear-code.com>

--- a/templates/Dockerfile.erb
+++ b/templates/Dockerfile.erb
@@ -49,6 +49,7 @@ RUN buildDeps="sudo make gcc g++ libc-dev libffi-dev<% if target == "graylog" %>
     apt-get purge -y --auto-remove \
                   -o APT::AutoRemove::RecommendsImportant=false \
                   $buildDeps \
+                  '*-dev'
  && rm -rf /var/lib/apt/lists/* \
     && gem sources --clear-all \
     && rm -rf /tmp/* /var/tmp/* /usr/lib/ruby/gems/*/cache/*.gem<% if target == "kafka" || target == "kafka2" %> \
